--- a/templates/home.html
+++ b/templates/home.html
@@ -9,7 +9,7 @@
       class="form-control"
       placeholder="Search"
     />
-    <span><button class="btn btn-outline-success my-2">Search</button></span>
+    <span><button type="submit" class="btn btn-outline-success my-2">Search</button></span>
   </div>
 </form>
 {% comment %} Search Bar End {% endcomment %} {% comment %} List Group Start {%
