--- a/templates/layout.html
+++ b/templates/layout.html
@@ -44,6 +44,7 @@
         </div>
       </div>
     </nav>
+    {% include 'includes/messages.html' %}
     <div class="container my-2">{% block content %}{% endblock content %}</div>
 
     <script
