--- a/templates/home.html
+++ b/templates/home.html
@@ -1,75 +1,109 @@
 {% extends 'layout.html' %} {% block title %}MyDiary{% endblock title %} 
-{%block content %} {% comment %} Search Bar Start {% endcomment %}
-<form method="get" action="/search">
-  {% comment %} Sends Get request to Search Route {% endcomment %}
-  <div class="form-group my-2">
-    <input
-      required
-      name="search"
-      type="text"
-      class="form-control"
-      placeholder="Search"
-    />
-    <span
-      ><button type="submit" class="btn btn-outline-success my-2">
-        Search
-      </button></span
-    >
+{%block content %} 
+{% comment %} Search Bar Start {% endcomment %}
+  <div class="container-fluid my-2">
+<div class="row my-2">
+  <div class="col-sm-2">
+    <h5 class="text-center">Common Tags:</h5>
+    <ul class="list-group my-2 list-group-flush">
+      {% for tags in tags %}
+      <li class="list-group-item">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="16"
+          height="16"
+          fill="currentColor"
+          class="bi bi-bookmark"
+          viewBox="0 0 16 16"
+        >
+          <path
+            d="M2 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v13.5a.5.5 0 0 1-.777.416L8 13.101l-5.223 2.815A.5.5 0 0 1 2 15.5V2zm2-1a1 1 0 0 0-1 1v12.566l4.723-2.482a.5.5 0 0 1 .554 0L13 14.566V2a1 1 0 0 0-1-1H4z"
+          />
+        </svg>
+
+        <a href="#">{{tags}}</a>
+      </li>
+
+      {% endfor %}
+    </ul>
   </div>
-</form>
-
-<a class="btn btn-outline-primary my-2" href="{% url 'note-create' %}">
-  <svg
-    xmlns="http://www.w3.org/2000/svg"
-    width="16"
-    height="16"
-    fill="currentColor"
-    class="bi bi-plus"
-    viewBox="0 0 16 16"
-  >
-    <path
-      d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"
-    />
-  </svg>
-  Create Note</a
->
-<ul class="list-group">
-  {% for note in notes %}
-  <li class="list-group-item my-2" style="padding: 10px">
-  <a href="/note/show/{{note.id}}">{{forloop.counter}}) {{note.title}}</a>
-<div style="display: flex">
-  {% for tag in note.tags.all %}
-  <a href="{% url 'tagged' tag.slug %}"
-    ><svg
-      xmlns="http://www.w3.org/2000/svg"
-      width="16"
-      height="16"
-      fill="currentColor"
-      class="bi bi-bookmark"
-      viewBox="0 0 16 16"
+  <div class="col-md-9">
+    <form method="get" action="/search">
+      {% comment %} Sends Get request to Search Route {% endcomment %}
+      <div class="form-group my-2">
+        <input
+          required
+          name="search"
+          type="text"
+          class="form-control"
+          placeholder="Search"
+        />
+        <span
+          ><button type="submit" class="btn btn-outline-success my-2">
+            Search
+          </button></span
+        >
+      </div>
+    </form>
+    <a class="btn btn-outline-primary my-2" href="{% url 'note-create' %}">
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        width="16"
+        height="16"
+        fill="currentColor"
+        class="bi bi-plus"
+        viewBox="0 0 16 16"
+      >
+        <path
+          d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"
+        />
+      </svg>
+      Create Note</a
     >
-      <path
-        d="M2 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v13.5a.5.5 0 0 1-.777.416L8 13.101l-5.223 2.815A.5.5 0 0 1 2 15.5V2zm2-1a1 1 0 0 0-1 1v12.566l4.723-2.482a.5.5 0 0 1 .554 0L13 14.566V2a1 1 0 0 0-1-1H4z"
-      /></svg
-    >#{{ tag }}</a
-  >
-  {% endfor %}
-</div>
-<div class="button-group" style="float: right">
-  <a class="btn btn-outline-danger" href="{% url 'note-delete' id=note.id %}"
-    >Delete</a
-  >
-  <a class="btn btn-outline-secondary" href="{% url 'note-edit' id=note.id %}"
-    >Edit</a
-  >
-  <div></div>
-</div>
-  </li>
-  {% empty %}
-  <p class="text-success">Lets Create Some Memories</p>
+    <ul class="list-group">
+      {% for note in notes %}
+      <li class="list-group-item my-2" style="padding: 10px">
+        <a href="/note/show/{{note.id}}">{{forloop.counter}}) {{note.title}}</a>
+        <div style="display: flex">
+          {% for tag in note.tags.all %}
+          <a href="{% url 'tagged' tag.slug %}"
+            ><svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="16"
+              height="16"
+              fill="currentColor"
+              class="bi bi-bookmark"
+              viewBox="0 0 16 16"
+            >
+              <path
+                d="M2 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v13.5a.5.5 0 0 1-.777.416L8 13.101l-5.223 2.815A.5.5 0 0 1 2 15.5V2zm2-1a1 1 0 0 0-1 1v12.566l4.723-2.482a.5.5 0 0 1 .554 0L13 14.566V2a1 1 0 0 0-1-1H4z"
+              />
+            </svg>
+             #{{ tag }}</a
+          >
+          {% endfor %}
+        </div>
+        <div class="button-group" style="float: right">
+          <a
+            class="btn btn-outline-danger"
+            href="{% url 'note-delete' id=note.id %}"
+            >Delete</a
+          >
+          <a
+            class="btn btn-outline-secondary"
+            href="{% url 'note-edit' id=note.id %}"
+            >Edit</a
+          >
+          <div></div>
+        </div>
+      </li>
+      {% empty %}
+      <p class="text-success">Lets Create Some Memories</p>
 
-  {% endfor %}
-</ul>
+      {% endfor %}
+    </ul>
+  </div>
+</div>
+</div>
 
 {% comment %} List Group End {% endcomment %} {% endblock content %}
-
