--- a/templates/layout.html
+++ b/templates/layout.html
@@ -45,7 +45,7 @@
       </div>
     </nav>
     {% include 'includes/messages.html' %}
-    <div class="container my-2">{% block content %}{% endblock content %}</div>
+  {% block content %}{% endblock content %}
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
