--- a/templates/note/show-note.html
+++ b/templates/note/show-note.html
@@ -1,4 +1,10 @@
 {% extends 'layout.html' %} {% block content %}
+<div class="container my-2">
+
+
+
+
+
 <div class="row my-2">
   <div clas="col-md-8">
     <main class="blog-post">
@@ -11,6 +17,7 @@
       {% endfor %}
     </main>
   </div>
+</div>
 </div>
 
 {% endblock content %}
