--- a/templates/home.html
+++ b/templates/home.html
@@ -30,7 +30,7 @@
   <div class="col-md-9">
     <form method="get" action="/search">
       {% comment %} Sends Get request to Search Route {% endcomment %}
-      <div class="form-group my-2">
+      <div class="form-group my-2" >
         <input
           required
           name="search"
@@ -38,12 +38,13 @@
           class="form-control"
           placeholder="Search"
         />
-        <span
-          ><button type="submit" class="btn btn-outline-success my-2">
-            Search
-          </button></span
-        >
+      
+       
+        
       </div>
+         <button type="submit" style="display:inline;" class="btn btn-outline-success my-2">
+            Search
+        </button>
     </form>
     <a class="btn btn-outline-primary my-2" href="{% url 'note-create' %}">
       <svg
@@ -60,50 +61,73 @@
       </svg>
       Create Note</a
     >
-    <ul class="list-group">
-      {% for note in notes %}
-      <li class="list-group-item my-2" style="padding: 10px">
-        <a href="/note/show/{{note.id}}">{{forloop.counter}}) {{note.title}}</a>
-        <div style="display: flex">
-          {% for tag in note.tags.all %}
-          <a href="{% url 'tagged' tag.slug %}"
-            ><svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="16"
-              height="16"
-              fill="currentColor"
-              class="bi bi-bookmark"
-              viewBox="0 0 16 16"
-            >
-              <path
-                d="M2 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v13.5a.5.5 0 0 1-.777.416L8 13.101l-5.223 2.815A.5.5 0 0 1 2 15.5V2zm2-1a1 1 0 0 0-1 1v12.566l4.723-2.482a.5.5 0 0 1 .554 0L13 14.566V2a1 1 0 0 0-1-1H4z"
-              />
-            </svg>
-             #{{ tag }}</a
-          >
-          {% endfor %}
-        </div>
-        <div class="button-group" style="float: right">
-          <a
-            class="btn btn-outline-danger"
-            href="{% url 'note-delete' id=note.id %}"
-            >Delete</a
-          >
-          <a
-            class="btn btn-outline-secondary"
-            href="{% url 'note-edit' id=note.id %}"
-            >Edit</a
-          >
-          <div></div>
-        </div>
-      </li>
-      {% empty %}
-      <p class="text-success">Lets Create Some Memories</p>
-
-      {% endfor %}
-    </ul>
+   {% include 'includes/notes.html' %}
   </div>
+
+
+
+{% if notes.has_other_pages %}
+
+
+<nav aria-label="Page navigation example">
+  <ul class="pagination justify-content-center">
+  {% if notes.has_previous %}
+    <li class="page-item">
+      <a class="page-link" href="?page={{notes.previous_page_number}}" aria-label="Previous">
+        <span aria-hidden="true">&laquo;</span>
+        <span class="sr-only">Previous</span>
+      </a>
+    </li>
+    {% else %}
+      <li class="page-item disabled">
+      <a class="page-link" href="#" aria-label="Previous">
+        <span aria-hidden="true">&laquo;</span>
+        <span class="sr-only">Previous</span>
+      </a>
+    </li>
+
+  {% endif %}
+  {% for i in notes.paginator.page_range  %}
+  {% if notes.number == i %}
+  
+  
+  <li class="page-item active">
+      <span class="page-link">
+        {{i}}
+        <span class="sr-only">(current)</span>
+      </span>
+    </li>
+    {% else %}
+  <li class="page-item"><a class="page-link" href="?page={{i}}">{{i}}</a></li>
+  {% endif %}
+  
+  
+  {% endfor %}
+  {% if notes.has_next %}
+   
+     <a class="page-link" href="?page={{notes.next_page_number}}"aria-label="Next">
+        <span aria-hidden="true">&raquo;</span>
+        <span class="sr-only">Next</span>
+      </a>
+    {% else %}
+     <li class="page-item disabled">
+      <a class="page-link" href="#" aria-label="Previous">
+        <span aria-hidden="true">&raquo;</span>
+        <span class="sr-only">Next</span>
+      </a>
+    </li>
+    {% endif %}
+  
+    </li>
+  </ul>
+</nav>
+
+{% endif %}
+
+
+
 </div>
+
 </div>
 
 {% comment %} List Group End {% endcomment %} {% endblock content %}
