--- a/templates/home.html
+++ b/templates/home.html
@@ -63,66 +63,14 @@
     >
    {% include 'includes/notes.html' %}
   </div>
+  {% include 'includes/pagination.html' %}
 
 
 
-{% if notes.has_other_pages %}
 
 
-<nav aria-label="Page navigation example">
-  <ul class="pagination justify-content-center">
-  {% if notes.has_previous %}
-    <li class="page-item">
-      <a class="page-link" href="?page={{notes.previous_page_number}}" aria-label="Previous">
-        <span aria-hidden="true">&laquo;</span>
-        <span class="sr-only">Previous</span>
-      </a>
-    </li>
-    {% else %}
-      <li class="page-item disabled">
-      <a class="page-link" href="#" aria-label="Previous">
-        <span aria-hidden="true">&laquo;</span>
-        <span class="sr-only">Previous</span>
-      </a>
-    </li>
 
-  {% endif %}
-  {% for i in notes.paginator.page_range  %}
-  {% if notes.number == i %}
-  
-  
-  <li class="page-item active">
-      <span class="page-link">
-        {{i}}
-        <span class="sr-only">(current)</span>
-      </span>
-    </li>
-    {% else %}
-  <li class="page-item"><a class="page-link" href="?page={{i}}">{{i}}</a></li>
-  {% endif %}
-  
-  
-  {% endfor %}
-  {% if notes.has_next %}
-   
-     <a class="page-link" href="?page={{notes.next_page_number}}"aria-label="Next">
-        <span aria-hidden="true">&raquo;</span>
-        <span class="sr-only">Next</span>
-      </a>
-    {% else %}
-     <li class="page-item disabled">
-      <a class="page-link" href="#" aria-label="Previous">
-        <span aria-hidden="true">&raquo;</span>
-        <span class="sr-only">Next</span>
-      </a>
-    </li>
-    {% endif %}
-  
-    </li>
-  </ul>
-</nav>
 
-{% endif %}
 
 
 
