--- a/templates/note/create-note.html
+++ b/templates/note/create-note.html
@@ -1,10 +1,21 @@
-{% extends 'layout.html' %} {% load crispy_forms_tags %} {% block content %}
+{% extends 'layout.html' %} {% load crispy_forms_tags %} 
+{% load static %}
+{% block css %}
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.18/summernote-bs4.min.css" integrity="sha512-pDpLmYKym2pnF0DNYDKxRnOk1wkM9fISpSOjt8kWFKQeDmBTjSnBZhTd41tXwh8+bRMoSaFsRnznZUiH9i3pxA==" crossorigin="anonymous" />
 <style>
   textarea {
     height: 150px;
     resize: none;
   }
 </style>
+{% endblock css %}
+
+{% block content %}
+
+
+
+
+
 <div class="container my-2">
 
 <form method="post">
