--- a/templates/includes/notes.html
+++ b/templates/includes/notes.html
@@ -1,42 +1,40 @@
- <ul class="list-group">
-      {% for note in notes %}
-      <li class="list-group-item my-2" style="padding: 10px">
-        <a href="/note/show/{{note.id}}">{{forloop.counter}}) {{note.title}}</a>
-        <div style="display: flex">
-          {% for tag in note.tags.all %}
-          <a href="{% url 'tagged' tag.slug %}"
-            ><svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="16"
-              height="16"
-              fill="currentColor"
-              class="bi bi-bookmark"
-              viewBox="0 0 16 16"
-            >
-              <path
-                d="M2 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v13.5a.5.5 0 0 1-.777.416L8 13.101l-5.223 2.815A.5.5 0 0 1 2 15.5V2zm2-1a1 1 0 0 0-1 1v12.566l4.723-2.482a.5.5 0 0 1 .554 0L13 14.566V2a1 1 0 0 0-1-1H4z"
-              />
-            </svg>
-             #{{ tag }}</a
-          >
-          {% endfor %}
-        </div>
-        <div class="button-group" style="float: right">
-          <a
-            class="btn btn-outline-danger"
-            href="{% url 'note-delete' id=note.id %}"
-            >Delete</a
-          >
-          <a
-            class="btn btn-outline-secondary"
-            href="{% url 'note-edit' id=note.id %}"
-            >Edit</a
-          >
-          <div></div>
-        </div>
-      </li>
-      {% empty %}
-      <p class="text-success">Lets Create Some Memories</p>
-
+<ul class="list-group">
+  {% for note in notes %}
+  <li class="list-group-item my-2" style="padding: 10px">
+    <a href="/note/show/{{note.slug}}">{{forloop.counter}}) {{note.title}}</a>
+    <div style="display: flex ; align-items:center">
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        width="16"
+        height="16"
+        fill="currentColor"
+        class="bi bi-bookmark"
+        viewBox="0 0 16 16"
+      >
+        <path
+          d="M2 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v13.5a.5.5 0 0 1-.777.416L8 13.101l-5.223 2.815A.5.5 0 0 1 2 15.5V2zm2-1a1 1 0 0 0-1 1v12.566l4.723-2.482a.5.5 0 0 1 .554 0L13 14.566V2a1 1 0 0 0-1-1H4z"
+        />
+      </svg>
+      {% for tag in note.tags.all %}
+      <a href="{% url 'tagged' tag.slug %}" style="text-decoration: none; color:{{ tag_color }}"> #{{ tag }} </a>
       {% endfor %}
-    </ul>
+    </div>
+    <div class="button-group" style="float: right">
+      <a
+        class="btn btn-outline-danger"
+        href="{% url 'note-delete' id=note.id %}"
+        >Delete</a
+      >
+      <a
+        class="btn btn-outline-secondary"
+        href="{% url 'note-edit' id=note.id %}"
+        >Edit</a
+      >
+      <div></div>
+    </div>
+  </li>
+  {% empty %}
+  <p class="text-success">Lets Create Some Memories</p>
+
+  {% endfor %}
+</ul>
