--- a/templates/layout.html
+++ b/templates/layout.html
@@ -5,13 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     
     {% load static %}
-
+    <style>
+      .float{
+        position:fixed;
+        width:60px;
+        height:60px;
+        bottom:40px;
+        right:40px;
+        background-color:#0C9;
+        color:#FFF;
+        border-radius:50px;
+        text-align:center;
+        box-shadow: 2px 2px 3px #999;
+      }
+    </style>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6"
       crossorigin="anonymous"
     /> 
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+
     {% block css %}{% endblock css %}
 
     <title>{% block title %}{% endblock title %}</title>
@@ -36,15 +51,43 @@
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
             </li>
+            {% if user.is_authenticated %}
             <li class="nav-item">
-              <a class="nav-link" href="#">Features</a>
+              <a class="nav-item nav-link" href="#">{{ user.username }}</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Pricing</a>
+              <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
             </li>
+            
+
+            {% else %}
+            <li class="nav-item">
+              <a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-item nav-link" href="{% url 'register' %}">Register</a>
+            </li>
+            {% endif %}
+
+            
+            <!-- <form method="get" action="/search">
+                {% comment %} Sends Get request to Search Route {% endcomment %}
+                <div class="form-group" >
+                  <input
+                   
+                  />
+                </div>
+                <button type="submit" style="display:inline;" class="btn btn-outline-success">
+                    Search
+                </button>
+            </form> -->
            
           </ul>
         </div>
+        <form method="get" action="/search" class="form-inline my-2 my-lg-0" style= "display:flex">
+          <input class="form-control mr-sm-2" required name="search" class="form-control" placeholder="Search" type="search" aria-label="Search">
+          <button class="btn btn-success mx-2 my-2 my-sm-0" type="submit">Search</button>
+        </form>
       </div>
     </nav>
     {% include 'includes/messages.html' %}
@@ -52,13 +95,15 @@
 
     
    
-
+    <a href={% url 'note-create' %} class="float">
+      <i class="material-icons" style="font-size: 40px;margin: 7px;" >create</i>
+    </a>
   </body>
- <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" ,integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf",crossorigin="anonymous" defer></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous" defer></script>
-<script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.js" defer></script>
-<script src="{% static 'js/text-editor.js' %}"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" ,integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf",crossorigin="anonymous" defer></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous" defer></script>
+
+  <script src="{% static 'js/text-editor.js' %}"></script>
 
 
   {% block scripts %}{% endblock scripts %}
