--- a/templates/note/create-note.html
+++ b/templates/note/create-note.html
@@ -1,11 +1,28 @@
-{% extends 'layout.html' %} {% load crispy_forms_tags %} 
+{% extends 'layout.html' %} 
+{% load crispy_forms_tags %} 
 {% load static %}
 {% block css %}
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.18/summernote-bs4.min.css" integrity="sha512-pDpLmYKym2pnF0DNYDKxRnOk1wkM9fISpSOjt8kWFKQeDmBTjSnBZhTd41tXwh8+bRMoSaFsRnznZUiH9i3pxA==" crossorigin="anonymous" />
+
+
+<script src="https://code.jquery.com/jquery-3.5.1.min.js" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+
+<link href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote-bs4.min.css" rel="stylesheet">
+<script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote-bs4.min.js"></script>
+
+
 <style>
-  textarea {
-    height: 150px;
-    resize: none;
+  #id_title {
+    height:10px
+  }
+  #id_content{
+    height:90vh
+  }
+  #editor{
+    height:500px
   }
 </style>
 {% endblock css %}
@@ -20,13 +37,34 @@
 
 <form method="post">
   {% csrf_token %}
-  <div class="form-group">{{form.title|as_crispy_field}}</div>
+  <div class="form-group" rows=1>{{form.title|as_crispy_field}}</div>
   <div class="form-group">{{form.content|as_crispy_field}}</div>
-
   <div class="form-group" data-role="tagsinput">{{form.tags|as_crispy_field}}</div>
   <button class="btn btn-primary" type="submit">Save</button>
 </form>
 </div>
 
 
+
+<script>
+  $('#id_content').summernote({
+
+    toolbar: [
+      ['style', ['style']],
+      ['font', ['bold', 'italic', 'underline', 'clear']],
+      ['fontname', ['fontname']],
+      ['color', ['color']],
+      ['para', ['ul', 'ol', 'paragraph']],
+      ['height', ['height']],
+      ['table', ['table']],
+      ['insert', ['link', 'picture', 'hr']],
+      ['view', ['fullscreen', 'codeview']],
+      ['help', ['help']]
+    ],
+    placeholder: 'Hello Bootstrap 4',
+    tabsize: 2,
+    height: 600,
+    
+  });
+</script>
 {% endblock content %}
