--- a/templates/layout.html
+++ b/templates/layout.html
@@ -19,12 +19,7 @@
         box-shadow: 2px 2px 3px #999;
       }
     </style>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6"
-      crossorigin="anonymous"
-    /> 
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
     {% block css %}{% endblock css %}
@@ -32,7 +27,7 @@
     <title>{% block title %}{% endblock title %}</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-primary">
+    <nav class="navbar navbar-expand-lg navbar-light bg-primary" style="color: #fff;">
       <div class="container-fluid">
         <a class="navbar-brand" href="/">My Diary</a>
         <button
@@ -51,43 +46,35 @@
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
             </li>
-            {% if user.is_authenticated %}
-            <li class="nav-item">
-              <a class="nav-item nav-link" href="#">{{ user.username }}</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
-            </li>
-            
-
-            {% else %}
-            <li class="nav-item">
-              <a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-item nav-link" href="{% url 'register' %}">Register</a>
-            </li>
-            {% endif %}
-
-            
-            <!-- <form method="get" action="/search">
-                {% comment %} Sends Get request to Search Route {% endcomment %}
-                <div class="form-group" >
-                  <input
-                   
-                  />
-                </div>
-                <button type="submit" style="display:inline;" class="btn btn-outline-success">
-                    Search
-                </button>
-            </form> -->
            
           </ul>
+          <form method="get" action="/search" class="form-inline my-2 my-lg-0" style= "display:flex">
+            <input class="form-control mr-sm-2" required name="search" class="form-control" placeholder="Search" type="search" aria-label="Search">
+            <button class="btn btn-success mx-2 my-2 my-sm-0" type="submit">Search</button>
+          </form>
+          <ul class="navbar-nav">
+            {% if user.is_authenticated %}
+              <li class="nav-item">
+                <a class="nav-item nav-link" href="#">{{ user.username }}</a>
+         
+              </li>
+              <li class="nav-item">
+                <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
+              </li>
+              
+  
+              {% else %}
+              <li class="nav-item">
+                <a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-item nav-link" href="{% url 'register' %}">Register</a>
+              </li>
+              {% endif %}
+          </ul>
         </div>
-        <form method="get" action="/search" class="form-inline my-2 my-lg-0" style= "display:flex">
-          <input class="form-control mr-sm-2" required name="search" class="form-control" placeholder="Search" type="search" aria-label="Search">
-          <button class="btn btn-success mx-2 my-2 my-sm-0" type="submit">Search</button>
-        </form>
+        
+        
       </div>
     </nav>
     {% include 'includes/messages.html' %}
@@ -99,10 +86,10 @@
       <i class="material-icons" style="font-size: 40px;margin: 7px;" >create</i>
     </a>
   </body>
-  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" ,integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf",crossorigin="anonymous" defer></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous" defer></script>
-
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+ 
   <script src="{% static 'js/text-editor.js' %}"></script>
 
 
