--- a/templates/note/create-note.html
+++ b/templates/note/create-note.html
@@ -3,6 +3,8 @@
 {% load static %}
 {% block css %}
 
+<link rel="stylesheet" href={% static 'css/tagsinput.css' %}>
+
 
 <script src="https://code.jquery.com/jquery-3.5.1.min.js" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
@@ -16,7 +18,7 @@
 
 <style>
   #id_title {
-    height:10px
+    height:40px
   }
   #id_content{
     height:90vh
@@ -39,7 +41,10 @@
   {% csrf_token %}
   <div class="form-group" rows=1>{{form.title|as_crispy_field}}</div>
   <div class="form-group">{{form.content|as_crispy_field}}</div>
-  <div class="form-group" data-role="tagsinput">{{form.tags|as_crispy_field}}</div>
+  <div class="form-group">
+    <label>Tags</label>
+    <input type="text" data-role="tagsinput" name="tags" class="tagwidget form-control" required id="id_tags">
+  </div>
   <button class="btn btn-primary" type="submit">Save</button>
 </form>
 </div>
@@ -66,5 +71,11 @@
     height: 600,
     
   });
+</script>
+<script src={% static 'js/tagsinput.js' %}></script>
+<script>
+  $("#id_tags").submit(function(e){
+      e.preventDefault();
+      });
 </script>
 {% endblock content %}
