--- a/templates/note/show-note.html
+++ b/templates/note/show-note.html
@@ -2,18 +2,17 @@
 <div class="container my-2">
 
 
-
-
-
 <div class="row my-2">
   <div clas="col-md-8">
-    <main class="blog-post">
+    <main class="blog-post" style="word-wrap: break-word">
       <h2 class="blog-post-title">{{note.title|safe}}</h2>
       <p class="blog-post-mesta">{{note.created_at|safe}}</p>
       {{note.content|safe}}
       <hr />
       Tags: {% for tag in note.tags.all %}
-      <span>{{tag|safe}}</span>
+      <!-- <span class="badge badge-success">{{tag|safe}}</span> -->
+        
+        <span class="badge badge-info"><a href="{% url 'tagged' tag.slug %}" style='text-decoration: none; color:beige'>{{tag|safe}}</a></span>
       {% endfor %}
     </main>
   </div>
