--- a/templates/includes/notes.html
+++ b/templates/includes/notes.html
@@ -29,7 +29,7 @@
       >
       <a
         class="btn btn-outline-secondary"
-        href="{% url 'note-edit' id=note.id %}"
+        href="{% url 'note-edit' slug=note.slug %}"
         >Edit</a
       >
       <div></div>
