--- a/templates/note/tags.html
+++ b/templates/note/tags.html
@@ -14,7 +14,7 @@
 
             <div>
                 <a class="btn btn-outline-danger m-1" href="{% url 'note-delete' id=note.id %}">Delete</a>
-                <a class="btn btn-outline-secondary m-1" href="{% url 'note-edit' id=note.id %}">Edit</a>
+                <a class="btn btn-outline-secondary m-1" href="{% url 'note-edit' slug=note.slug %}">Edit</a>
             </div>
            
         </div>
