--- a/templates/layout.html
+++ b/templates/layout.html
@@ -52,12 +52,8 @@
           <ul class="navbar-nav">
 
             {% if user.is_authenticated %}
-              <li>
-                <form method="get" action="/search" class="form-inline my-2 my-lg-0" style= "display:flex">
-                  <input class="form-control mr-sm-2" required name="search" class="form-control" placeholder="Search" type="search" aria-label="Search">
-                  <button class="btn btn-success mx-2 my-2 my-sm-0" type="submit">Search</button>
-                </form>
-              </li>
+           
+            
               <li class="nav-item">
                 <a class="nav-item nav-link" href="#">{{ user.username }}</a>
          
@@ -65,6 +61,12 @@
               <li class="nav-item">
                 <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
               </li>
+              </ul>
+               <form method="get" action="/search" class="d-flex" >
+                  <input class="form-control me-2" required name="search" class="form-control" placeholder="Search" type="search" aria-label="Search">
+                  <button class="btn btn-success mx-2 my-2 my-sm-0" type="submit">Search</button>
+              </form>
+                
               
   
               {% else %}
@@ -74,8 +76,9 @@
               <li class="nav-item">
                 <a class="nav-item nav-link" href="{% url 'register' %}">Register</a>
               </li>
+              </ul>
               {% endif %}
-          </ul>
+          
         </div>
         
         
@@ -92,7 +95,8 @@
   </body>
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+ <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+
  
   <script src="{% static 'js/text-editor.js' %}"></script>
 
