--- a/templates/About.html
+++ b/templates/About.html
@@ -4,7 +4,7 @@
 {% block base-home-body %}
 
 <div class="title">
-    <h1>My Diary is just a Simple project</h1>
+    <h1>My Notes is just a Simple project</h1>
 </div>
 
 {% endblock base-home-body %}
