--- a/templates/base-home.html
+++ b/templates/base-home.html
@@ -2,7 +2,7 @@
 {% load static %}
 <html>
 <head>    
-   <title>My Diary</title>
+   <title>My Notes</title>
    <link rel="stylesheet" type="text/css" href={% static 'css/home.css' %}>
    <link href="https://fonts.googleapis.com/css?family=Waiting+for+the+Sunrise" rel="stylesheet" type="text/css"/>
 </head>
