--- a/templates/includes/notes.html
+++ b/templates/includes/notes.html
@@ -36,7 +36,7 @@
     </div>
   </li>
   {% empty %}
-  <p class="text-success">Lets Create Some Memories</p>
+  <h1 class="text-success">Start Noting !!!</h1>
 
   {% endfor %}
 </ul>
