--- a/templates/mynotes.html
+++ b/templates/mynotes.html
@@ -1,4 +1,4 @@
-{% extends 'layout.html' %} {% block title %}MyDiary{% endblock title %} 
+{% extends 'layout.html' %} {% block title %}My notes{% endblock title %} 
 {%block content %} 
 {% comment %} Search Bar Start {% endcomment %}
   <div class="container-fluid my-2">
