--- a/templates/includes/messages.html
+++ b/templates/includes/messages.html
@@ -1,6 +1,6 @@
 {% if messages %} {% for message in messages %}
-<div class="container my-2">
-  <div class="alert alert-{{ message.tags }}">{{ message|safe }}</div>
+<div class="container my-2 alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+  {{ message|safe }}
 </div>
 
 {% endfor %} {% endif %}
