--- a/templates/layout.html
+++ b/templates/layout.html
@@ -13,8 +13,6 @@
         background-position: center;
       }
 
-
-
       .float{
         position:fixed;
         width:60px;
@@ -38,7 +36,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark" >
       <div class="container-fluid">
-        <a class="navbar-brand" href="/">My Diary</a>
+        <a class="navbar-brand" href="/">My Notes</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -51,42 +49,47 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
+          <ul class="col navbar-nav">
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="{% url 'about' %}">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="{% url 'contact' %}">Contact</a>
             </li>
            
           </ul>
           
-          <ul class="navbar-nav">
-
-            {% if user.is_authenticated %}
-           
-            
-              <li class="nav-item">
-                <a class="nav-item nav-link" href="#">{{ user.username }}</a>
-         
-              </li>
-              <li class="nav-item">
-                <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
-              </li>
-              </ul>
-               <form method="get" action="/search" class="d-flex" >
-                  <input class="form-control me-2" required name="search" class="form-control" placeholder="Search" type="search" aria-label="Search">
-                  <button class="btn btn-success mx-2 my-2 my-sm-0" type="submit">Search</button>
-              </form>
-                
-              
+            <ul class="navbar-nav">
   
-              {% else %}
-              <li class="nav-item">
-                <a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-item nav-link" href="{% url 'register' %}">Register</a>
-              </li>
-              </ul>
-              {% endif %}
+              {% if user.is_authenticated %}
+             
+              
+                <li class="nav-item">
+                  <a class="nav-item nav-link" href="#">{{ user.username }}</a>
+           
+                </li>
+                <li class="nav-item">
+                  <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
+                </li>
+                </ul>
+                 <form method="get" action="/search" class="d-flex right" >
+                    <input class="form-control me-2" required name="search" class="form-control" placeholder="Search" type="search" aria-label="Search">
+                    <button class="btn btn-success mx-2 my-2 my-sm-0" type="submit">Search</button>
+                </form>
+                  
+                
+                {% else %}
+                <li class="nav-item">
+                  <a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-item nav-link" href="{% url 'register' %}">Register</a>
+                </li>
+                </ul>
+                {% endif %}
           
         </div>
         
@@ -104,7 +107,7 @@
   </body>
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 
  
   <script src="{% static 'js/text-editor.js' %}"></script>
