--- a/templates/note/show-note.html
+++ b/templates/note/show-note.html
@@ -1,23 +1,23 @@
 {% extends 'layout.html' %} {% block content %}
-<div class="container my-2">
-
-
-<div class="row my-2">
-  <div clas="col-md-8">
-    <main class="blog-post" style="word-wrap: break-word">
-      <h2 class="blog-post-title">{{note.title|safe}}</h2>
-      <small class="text-muted">{{ note.created_at }}</small><br>
-      {{note.content|safe}}
-      <hr />
-      Tags: 
-      <div class="tags" style="display: flex; flex-wrap: wrap ; align-items:center">
-        {% for tag in note.tags.all %}
-          <span class="badge badge-info m-1"><a href="{% url 'tagged' tag.slug %}" style='text-decoration: none; color:beige'>{{tag|safe}}</a></span>
-        {% endfor %}
-      </div>
-    </main>
+<div class="container m-2">
+  <div class="row my-2">
+    <div clas="col-md-8">
+      <main class="blog-post" style="word-wrap: break-word">
+        <h2 class="blog-post-title">{{note.title|safe}}</h2>
+        <small class="text-muted">{{ note.created_at }}</small><br>
+        <div class="content" style="word-break: break-all;">
+          {{note.content|safe}}
+        </div>
+        <hr />
+        Tags: 
+        <div class="tags" style="display: flex; flex-wrap: wrap ; align-items:center">
+          {% for tag in note.tags.all %}
+            <span class="badge badge-info m-1"><a href="{% url 'tagged' tag.slug %}" style='text-decoration: none; color:beige'>{{tag|safe}}</a></span>
+          {% endfor %}
+        </div>
+      </main>
+    </div>
   </div>
-</div>
 </div>
 
 {% endblock content %}
