--- a/templates/users/register.html
+++ b/templates/users/register.html
@@ -8,12 +8,12 @@
         {% csrf_token %}
         <fieldset class="form-group">
           <legend class="border-bottom mb-4">
-            join Today
+           Register Today
           </legend>
           {{ form|crispy }}
         </fieldset>
         <div class="form_group">
-          <button class="btn btn-outline-primary" type="submit">sign up</button>
+          <button class="btn btn-outline-primary" type="submit">Register</button>
         </div>
       </form>
       <div class="border-top pt-3">
