--- a/templates/includes/notes.html
+++ b/templates/includes/notes.html
@@ -1,48 +1,39 @@
-<ul class="list-group">
-  {% for note in notes %}
-  <li class="list-group-item my-2" style="padding: 10px">
-    <h2>
-      <a style="text-decoration: none; color: #000;" href="/note/show/{{note.slug}}">{{forloop.counter}}) {{note.title}}</a>
-    </h2>
-    <div style="display: flex; flex-wrap: wrap ; align-items:center">
-      <svg
-        xmlns="http://www.w3.org/2000/svg"
-        width="16"
-        height="16"
-        fill="currentColor"
-        class="bi bi-bookmark"
-        viewBox="0 0 16 16"
-      >
-        <path
-          d="M2 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v13.5a.5.5 0 0 1-.777.416L8 13.101l-5.223 2.815A.5.5 0 0 1 2 15.5V2zm2-1a1 1 0 0 0-1 1v12.566l4.723-2.482a.5.5 0 0 1 .554 0L13 14.566V2a1 1 0 0 0-1-1H4z"
-        />
-      </svg>
-      {% for tag in note.tags.all %}
-        <span class="badge badge-info m-1"><a href="{% url 'tagged' tag.slug %}" style='text-decoration: none; color:beige'>{{tag|safe}}</a></span>
-      {% endfor %}
-    </div>
-    <div class="button-group" style="float: right">
-      <a
-        class="btn btn-outline-danger"
-        href="{% url 'note-delete' id=note.id %}"
-        >Delete</a
-      >
-      <a
-        class="btn btn-outline-secondary"
-        href="{% url 'note-edit' slug=note.slug %}"
-        >Edit</a
-      >
-      <a
-        class="btn btn-danger"
-        href="{% url 'pdf' slug=note.slug %}"
-        ><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-file-earmark-arrow-down-fill" viewBox="0 0 16 16">
-            <path d="M9.293 0H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V4.707A1 1 0 0 0 13.707 4L10 .293A1 1 0 0 0 9.293 0zM9.5 3.5v-2l3 3h-2a1 1 0 0 1-1-1zm-1 4v3.793l1.146-1.147a.5.5 0 0 1 .708.708l-2 2a.5.5 0 0 1-.708 0l-2-2a.5.5 0 0 1 .708-.708L7.5 11.293V7.5a.5.5 0 0 1 1 0z"/>
-          </svg>
-      </a>
-    </div>
-  </li>
-  {% empty %}
-  <h1 class="text-success">Start Noting !!!</h1>
 
-  {% endfor %}
-</ul>
+  <div class="row">
+    {% for note  in notes %}
+    <div class="card m-3" style="width: 18rem;">
+      <div class="card-body">
+        <h5 class="card-title">{{ note.title }}</h5>
+        <h6 class="card-subtitle mb-2 text-muted">{{note.created_at }}</h6>
+        <p class="card-text">
+          {% for tag in note.tags.all %}
+          <span class="badge badge-info m-1"
+            ><a
+              href="{% url 'tagged' tag.slug %}"
+              style="text-decoration: none; color: beige"
+              >{{tag|safe}}</a
+            ></span
+          >
+          {% endfor %}
+        </p>
+        <a   href="{% url 'note-edit' slug=note.slug %}" class="btn btn-outline-secondary"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pen" viewBox="0 0 16 16">
+          <path d="m13.498.795.149-.149a1.207 1.207 0 1 1 1.707 1.708l-.149.148a1.5 1.5 0 0 1-.059 2.059L4.854 14.854a.5.5 0 0 1-.233.131l-4 1a.5.5 0 0 1-.606-.606l1-4a.5.5 0 0 1 .131-.232l9.642-9.642a.5.5 0 0 0-.642.056L6.854 4.854a.5.5 0 1 1-.708-.708L9.44.854A1.5 1.5 0 0 1 11.5.796a1.5 1.5 0 0 1 1.998-.001zm-.644.766a.5.5 0 0 0-.707 0L1.95 11.756l-.764 3.057 3.057-.764L14.44 3.854a.5.5 0 0 0 0-.708l-1.585-1.585z"/>
+        </svg></a>
+        <a href="{% url 'note-delete' id=note.id%} " class="btn btn-outline-danger"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
+          <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z"/>
+          <path fill-rule="evenodd" d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z"/>
+        </svg></a>
+        <a href="{% url 'pdf' slug=note.slug %}" class="btn btn-outline-primary">
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-down-circle" viewBox="0 0 16 16">
+            <path fill-rule="evenodd" d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8zm15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 4.5a.5.5 0 0 0-1 0v5.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V4.5z"/>
+          </svg>
+        </a>
+      </div>
+    </div>
+    {% endfor %}
+
+  
+
+  </div>
+
+</div>
