--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="UTF-8">
+  <meta name="description" content="My Notes is note taking web application created using html , css and django.">
+  <meta name="keywords" content="HTML, CSS, JavaScript, Django">
+  <meta name="author" content="Antar  Mukhopadhaya, Shiladitya Das, Abhineet Saha">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     
     {% load static %}
     <style>
-      body{
-        background:url({% static "bg.jpg" %});
-        height: 100vh;
-        background-size: cover;
-        background-position: center;
-      }
-
+   
       .float{
         position:fixed;
         width:60px;
@@ -34,7 +32,7 @@
     <title>{% block title %}{% endblock title %}</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark" >
+    <nav class="navbar navbar-expand-lg navbar-light bg-light" >
       <div class="container-fluid">
         <a class="navbar-brand" href="/">My Notes</a>
         <button
@@ -51,14 +49,13 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="col navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
+              <a class="nav-link active" aria-current="page" href="{% url 'home' %}"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-house" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M2 13.5V7h1v6.5a.5.5 0 0 0 .5.5h9a.5.5 0 0 0 .5-.5V7h1v6.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5zm11-11V6l-2-2V2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5z"/>
+                <path fill-rule="evenodd" d="M7.293 1.5a1 1 0 0 1 1.414 0l6.647 6.646a.5.5 0 0 1-.708.708L8 2.207 1.354 8.854a.5.5 0 1 1-.708-.708L7.293 1.5z"/>
+              </svg></a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="{% url 'about' %}">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="{% url 'contact' %}">Contact</a>
-            </li>
+      
+            
            
           </ul>
           
@@ -72,14 +69,12 @@
            
                 </li>
                 <li class="nav-item">
-                  <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
+                  <a class="nav-item nav-link" href="{% url 'logout' %}"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-door-open" viewBox="0 0 16 16">
+                    <path d="M8.5 10c-.276 0-.5-.448-.5-1s.224-1 .5-1 .5.448.5 1-.224 1-.5 1z"/>
+                    <path d="M10.828.122A.5.5 0 0 1 11 .5V1h.5A1.5 1.5 0 0 1 13 2.5V15h1.5a.5.5 0 0 1 0 1h-13a.5.5 0 0 1 0-1H3V1.5a.5.5 0 0 1 .43-.495l7-1a.5.5 0 0 1 .398.117zM11.5 2H11v13h1V2.5a.5.5 0 0 0-.5-.5zM4 1.934V15h6V1.077l-6 .857z"/>
+                  </svg></a>
                 </li>
-                </ul>
-                 <form method="get" action="/search" class="d-flex right" >
-                    <input class="form-control me-2" required name="search" class="form-control" placeholder="Search" type="search" aria-label="Search">
-                    <button class="btn btn-success mx-2 my-2 my-sm-0" type="submit">Search</button>
-                </form>
-                  
+              
                 
                 {% else %}
                 <li class="nav-item">
@@ -97,13 +92,14 @@
       </div>
     </nav>
     {% include 'includes/messages.html' %}
-  {% block content %}{% endblock content %}
+    {% block content %}{% endblock content %}
 
     
    
     <a href={% url 'note-create' %} class="float">
       <i class="material-icons" style="font-size: 40px;margin: 7px;" >create</i>
     </a>
+    
   </body>
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
@@ -113,5 +109,5 @@
   <script src="{% static 'js/text-editor.js' %}"></script>
 
 
-  {% block scripts %}{% endblock scripts %}
+ 
 </html>
